workspace = { members = ["dogfight-macros"] }
[package]
name = "dogfight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
dogfight-macros = { path = "dogfight-macros" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
ts-rs = "7.1.1"
