workspace = { members = ["dogfight-macros", "dogfight-web"] }
[package]
name = "dogfight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dogfight-macros = { path = "dogfight-macros" }
euclid = "0.22.9"
image = "0.25.1"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
ts-rs = { version = "7.1.1", features = ["serde-compat"] }
